# projktSens

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
benchmark/: build.gradle
benchmark/src/androidTest/: AndroidManifest.xml
benchmark/src/main/: AndroidManifest.xml
chartLite/: build.gradle
chartLite/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jserver/: build.gradle  proguard-rules.pro
jserver/src/androidTest/: AndroidManifest.xml
jserver/src/main/: AndroidManifest.xml
jserver/src/main/res/drawable/: ic_launcher_foreground.xml
jserver/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
jserver/src/main/res/values-night/: themes.xml
serverProtocol/: build.gradle
serverProtocol/src/main/: AndroidManifest.xml
shared/: build.gradle
shared/android/: build.gradle
shared/android/src/main/: AndroidManifest.xml
shared/android/src/main/res/drawable/: ic_retry.xml
shared/android/src/main/res/layout/: activity_request_permissions.xml  choose_server_host_dialog.xml
shared/android/src/main/res/values-notnight/: colors.xml
shared/android/src/main/res/values-ru/: strings.xml
weather/: build.gradle
weather/app/: build.gradle  proguard-rules.pro
weather/app/src/main/: AndroidManifest.xml
weather/app/src/main/cpp/: AstroMoonInfoProvider.cpp  AstroMoonInfoProvider.h  AstroSunInfoProvider.cpp  AstroSunInfoProvider.h  CMakeLists.txt  app.cpp  app.h  config.h  v_acosf_impl.cpp  v_asinf_impl.cpp  v_cosf_impl.cpp  v_sincosf_fast_impl.cpp  v_sinf_impl.cpp  vmath_arm.h
(+347 files in other folders)
